--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "@angular/router": "~3.1.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "monaco-editor": "^0.7.0",
     "ng2-bootstrap": "^1.1.16",
+    "ng2-dropdown": "0.0.15",
+    "ng2-monaco-editor": "^0.0.1",
     "rxjs": "5.0.0-beta.12",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.6.23"
